2013-11-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.mk (lisp): Add electric.elc.

2013-11-29  Tom Seddon  <emacs@tomseddon.plus.com>  (tiny change)

	* w32font.c (g_b_init_get_char_width_32_w): New static var.
	(globals_of_w32font): Zero it out.
	(GetCharWidth32W_Proc): New function pointer.
	(get_char_width_32_w): New function.
	(compute_metrics): If get_glyph_outline_w returns an error, try
	get_char_width_32_w before declaring a failure.  This avoids
	punishing raster (a.k.a. "bitmap") fonts by slowing down
	redisplay.  (Bug#6364).

2013-11-29  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (clear_mouse_face): Don't invalidate the entire
	mouse-highlight info, just signal frame_up_to_date_hook that mouse
	highlight needs to be redisplayed.  (Bug#15913)

2013-11-29  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by static checking.
	* buffer.h (struct buffer_text, struct buffer):
	* frame.h (struct frame):
	* window.h (struct window):
	Avoid 'bool foo : 1;', as it's not portable to pre-C99 compilers,
	as described in ../lib/stdbool.in.h.  Use 'unsigned foo : 1;' instead.
	* menu.c (syms_of_menu): Define x-popup-dialog, removing a
	no-longer-valid use of HAVE_MENUS.
	* xdisp.c (propagate_buffer_redisplay): Now static.

2013-11-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xmenu.c (Fmenu_or_popup_active_p):
	* window.c (Fset_window_configuration):
	* menu.c (Fx_popup_menu, Fx_popup_dialog):
	* keyboard.c (record_menu_key, read_char_x_menu_prompt):
	* fns.c (Fyes_or_no_p):
	* editfns.c (Fmessage_box, Fmessage_or_box):
	* alloc.c (make_save_ptr_ptr):
	* xdisp.c, w32menu.c, term.c, xterm.h, xterm.c: Remove HAVE_MENUS.

	* window.c (Fset_window_configuration): Move select_window later.

2013-11-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	Refine redisplay optimizations to only redisplay *some* frames/windows
	rather than all of them.
	* xdisp.c (REDISPLAY_SOME): New constant.
	(redisplay_other_windows, wset_redisplay, fset_redisplay)