@@ -1,5 +1,9 @@
 2013-11-29  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* xdisp.c (REDISPLAY_SOME_P): New macro.
+	(redisplay_internal): Use it (bug#15999).
+	(prepare_menu_bars, redisplay_window): Use it as well.
+
 	* lisp.mk (lisp): Add electric.elc.
 
 2013-11-29  Tom Seddon  <emacs@tomseddon.plus.com>  (tiny change)
